# aiksaurus

./: .cvsignore  .gitignore  0.bz2  11.bz2  12.bz2  13.bz2  14.bz2  15.bz2  17.bz2  18.bz2  21.bz2  22.bz2  23.bz2  24.bz2  26.bz2  27.bz2  28.bz2  3.bz2  30.bz2  5.bz2  7.bz2  8.bz2  9.bz2  AUTHORS  AikSaurus.cpp  AikSaurus.h  AikString.Readme  AikString.cpp  AikString.h  AikString.test.cpp  CHANGES  ChangeLog  CommandLineDemo.cpp  InteractiveDemo.cpp  Makefile.am  Makefile.in  Makefile.msc  NEWS  README  README.W32  (+14 more)
0.12-core/: Aiksaurus.t.cpp  AiksaurusException.cpp  AiksaurusException.h  AsciiCompare.cpp  AsciiCompare.h  FileArray.cpp  FileArray.h  MakeTargets  Makefile  MeaningsFile.cpp  MeaningsFile.h  MeaningsHash.h  WordStream.h  WordsFile.h
base/: Aiksaurus.cpp  Aiksaurus.h  AiksaurusC.cpp  AiksaurusC.h  AiksaurusDLL.dsp  AiksaurusException.cpp  AiksaurusLIB.dsp  Arguments.cpp  AsciiCompare.h  Makefile.abi  Makefile.am  MeaningsHash.h  WordStream.h  WordsFile.cpp  WordsFile.h  aiksaurus-1.0.pc.in  aiksaurus.t.cpp  caiksaurus.cpp  config.h.msc
cocoa/: AbiAiksaurus-Info.plist  AikSaurus.icns  arrow.ai  main.m
cocoa/Aiksaurus.pbproj/: fjf.pbxuser  project.pbxproj
cocoa/English.lproj/: InfoPlist.strings
cocoa/abi/: AbiAiksaurus.h  AbiAiksaurus.m  xap_CocoaPlugin.h
cocoa/app/: AiksaurusCocoaMain.h  AiksaurusCocoaMain.m
cocoa/fmwk/: AiksaurusCocoa.h  AiksaurusCocoa.mm  AiksaurusCocoaDataSource.h  AiksaurusCocoaDataSource.m  AiksaurusCocoaPanel.m
core/: .cvsignore  AUTHORS  Aiksaurus.spec.in  CHANGES  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.in  libtool  mkinstalldirs
core/data/: Makefile  Makefile.am  Makefile.in
core/src/: Aiksaurus.cpp  Aiksaurus.h  AiksaurusC.cpp  AiksaurusC.h  AiksaurusDLL.dsp  AiksaurusException.cpp  AiksaurusException.h  AsciiCompare.cpp  AsciiCompare.h  FileArray.t.cpp  Makefile  Makefile.am  Makefile.in  Makefile.msc  MakefileLIB.msc  MeaningsFile.cpp  MeaningsFile.h  MeaningsFile.t.cpp  WordStream.h  WordsFile.cpp  WordsFile.t.cpp  WordsHash.h  aiksaurus.cpp  caiksaurus.c  caiksaurus.cpp  config.h  config.h.in
data/: 1.bz2  10.bz2  16.bz2  19.bz2  2.bz2  20.bz2  25.bz2  29.bz2  31.bz2  32.bz2  33.bz2  4.bz2  6.bz2  Makefile.am  license.bz2
data/0.12-dev/: README
data/0.12-dev/datagen/: Makefile  MeaningsHash.h
data/0.12-dev/gen_pms/: cleanup.cpp  cleanup.h  cleanup2.cpp  engine.cpp  engine2.cpp  fast.cpp  fast.h  final.1000  final.1000.75  fool.1  fool.2  killhuge.cpp  meanings.2  meanings.3  meanings.5  meanings.sh  setutils.cpp  stage1.cpp  stats.cpp  stripcomments.cpp  test.cpp
data/0.12-dev/gen_pms/datamanip/: CommandLineDemo.cpp.set  andrew_vec.cpp  andrew_vec.h  fool.out  jared_ass.h  test.cpp  timetest.cpp  timetest2.cpp
data/0.12-dev/gen_pms/datamanip/jared/: fool.1  stage1.cpp  stage2.cpp
data/0.12-dev/impl/: Aiksaurus.cpp  Aiksaurus.h  Aiksaurus.t.cpp  AiksaurusErrors.cpp  AiksaurusErrors.h  Arguments.cpp  FileArray.cpp  FileArray.h  FileArray.t.cpp  MakeTargets  Makefile  MeaningsFile.cpp  MeaningsFile.h  MeaningsFile.t.cpp  WordsFile.cpp  WordsFile.h  WordsFile.t.cpp  config.h  index.phtml  mrec.45  words.out
data/0.12-dev/impl/CVS/: Entries  Repository  Root
data/0.12-dev/impl/dat1/: m-i.45  w.45
data/0.12-dev/src/: BigWords.cpp  ExtractWords.cpp  FastSaurus.cpp  FastSaurus.h  FileArray.cpp  FileArray.t.cpp  HexView.cpp  ImplMeanings.cpp  ImplMeaningsTxt.cpp  ImplWords.cpp  InsensitiveSort.h  InsensitiveSorter.cpp  LinkWords.cpp  MakeTargets  Makefile  MeaningStream.cpp  Meanings.cpp  Meanings.h  MergeEngine.cpp  RandomWords.cpp  RatioAdder.cpp  Ratios.cpp  Ratios.h  SetUtils.t.cpp  SmallMerge.cpp  SortLinks.cpp  SortMeanings.cpp  SplitBad.cpp  WordInspect.cpp  WordStats.cpp  Words.h  WordsFile.h
gtk/: .cvsignore  AUTHORS  AiksaurusGTK.cpp  AiksaurusGTK.h  AiksaurusGTK.spec.in  AiksaurusGTK_histlist.cpp  AiksaurusGTK_histlist.h  AiksaurusGTK_history.cpp  AiksaurusGTK_history.h  AiksaurusGTK_icons.Readme  AiksaurusGTK_icons.cpp  AiksaurusGTK_icons.h  AiksaurusGTK_picbutton.Readme  AiksaurusGTK_picbutton.cpp  AiksaurusGTK_picbutton.h  AiksaurusGTK_strlist.Readme  AiksaurusGTK_strlist.cpp  AiksaurusGTK_strlist.h  AiksaurusGTK_utils.Readme  AiksaurusGTK_utils.cpp  AiksaurusGTK_utils.h  ChangeLog  Makefile  Makefile.am  NEWS  README  aclocal.m4  aiksaurusgtk3-1.0.pc.in  config.h.in  config.status  configure  configure.in  gaiksaurus-1.0.pc.in  gtkAiksaur.cpp  gtkAiksaur.h  gtkAiksaur.t.cpp  libtool  mkinstalldirs  test.histlist.cpp  test.history.cpp  (+4 more)
gtk/abiPlugin/: AiksaurusABI.cpp  Makefile
gtk/doc/: developer.html
gtk/src/: AiksaurusGTK-C.cpp  AiksaurusGTK.Readme  AiksaurusGTK.cpp  AiksaurusGTK.h  AiksaurusGTK_history.cpp  AiksaurusGTK_icons.cpp  AiksaurusGTK_picbutton.cpp  AiksaurusGTK_picbutton.h  AiksaurusGTK_strlist.Readme  AiksaurusGTK_strlist.cpp  AiksaurusGTK_utils.Readme  AiksaurusGTK_utils.cpp  Display.cpp  Display.h  Icons.cpp  Icons.h  Makefile  Makefile.am  Makefile.in  Meaning.cpp  Meaning.h  Replacebar.cpp  Toolbar.cpp  Toolbar.h  config.h  config.h.in  gtkAiksaur.t.cpp
gtk2/: Makefile.am
gtk2/doc/: index.html  user.html
gtk2/src/: AiksaurusGTK.cpp  AiksaurusGTK_histlist.Readme  AiksaurusGTK_history.Readme  Makefile.am  Toolbar.cpp  Toolbar.h
kde/: CHANGES  INSTALL  KAikSaurImpl.cpp  QAikSaurusHistory.cpp  StringLoopQueue.h  back.xpm  moc_Kaiksaur.cpp
kde/src/: Icons.cpp  (+7 more)
newarch/: Arguments.h  BigWords.cpp  ExtractWords.cpp  FileArray.h  HexView.cpp  ImplMeanings.cpp  ImplWords.cpp  LinkWords.cpp  MeaningStream.h  Meanings.cpp  Meanings.h  RandomWords.cpp  RatioStats.cpp  SetUtils.h  SmallMerge.cpp  SmallMerge.h  SortLinks.cpp  SplitBad.cpp  UnImplementMeanings.cpp  UnLink.cpp  WordStats.cpp  Words.cpp  Words.h
php/: CommandLineDemo  Makefile  download.php  index.php  install.php  phpAiksaur.phps  phpAiksaur_embedded.php  phpAiksaur_index.php  phpAiksaur_popup.phps  phpAiksaur_popup_closeframe.php  phpAiksaur_popup_frameset.phps  phpAiksaur_popup_searchframe.php
qt/: INSTALL  Makefile
(+70 files in other folders)
