dnl Process this file with autoconf to produce a configure script.
AC_INIT(AikSaurus.cpp)
AM_INIT_AUTOMAKE(AikSaurus, 0.11)
# FIXME: LIB_VERSION_INFO or whatever ? 
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_MSG_CHECKING("whether $CXX accepts -Wall") 
SAVE_CXXFLAGS=$CXXFLAGS
CXXFLAGS="-Wall $CXXFLAGS" 
AC_TRY_COMPILE(,,AC_MSG_RESULT("yes");,AC_MSG_RESULT("no");CXXFLAGS=$SAVE_CXXFLAGS)
AC_ARG_PROGRAM 
AC_PROG_INSTALL 
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
 
dnl Checks for typedefs, structures, and compiler characteristics.
AM_C_PROTOTYPES 
AC_C_CONST
AC_C_INLINE

if test "$prefix" = "NONE"
then
	prefix="$ac_default_prefix"
fi
aikdatadir=`eval echo $datadir/$PACKAGE/`
	 
dnl check for bz2 library
AC_CHECK_LIB(bz2, BZ2_bzReadOpen,,
	echo "bz2 library not found."
	exit 1
) 

AIK_CXXFLAGS="-DAIK_DATA_DIR=\\\"$aikdatadir\\\""
AC_SUBST(AIK_CXXFLAGS)

AC_OUTPUT(Makefile data/Makefile aiksaurus.spec)
