dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Aiksaurus.cpp)
AM_INIT_AUTOMAKE(Aiksaurus, 0.12)
# FIXME: LIB_VERSION_INFO or whatever ? 
AM_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_MSG_CHECKING("whether $CXX accepts -Wall -s") 
SAVE_CXXFLAGS=$CXXFLAGS
CXXFLAGS="-Wall -s $CXXFLAGS" 
AC_TRY_COMPILE(,,AC_MSG_RESULT("yes");,AC_MSG_RESULT("no");CXXFLAGS=$SAVE_CXXFLAGS)
dnl AC_ARG_PROGRAM 
AC_PROG_INSTALL 
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
 
dnl Checks for typedefs, structures, and compiler characteristics.
AM_C_PROTOTYPES 
AC_C_CONST
AC_C_INLINE

if test "$prefix" = "NONE"
then
	prefix="$ac_default_prefix"
fi
aikdatadir=`eval echo $datadir/$PACKAGE/`
	 
AIK_CXXFLAGS="-DAIK_DATA_DIR=\\\"$aikdatadir\\\""
AC_SUBST(AIK_CXXFLAGS)

AC_OUTPUT(Makefile src/Makefile data/Makefile)
