AC_INIT(src/Aiksaurus.cpp)
AM_INIT_AUTOMAKE(Aiksaurus, 0.15)
AM_CONFIG_HEADER(src/config.h)

AC_PROG_CC
AC_PROG_CXX
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h)
AC_CHECK_FUNCS(getenv)

Xuname=X`uname`
if test "$Xuname" != "XDarwin"; then
	CXXFLAGS="-Wall -s $CXXFLAGS"
fi

SAVE_CXXFLAGS=$CXXFLAGS
AC_MSG_CHECKING("whether $CXX accepts $SAVE_CXXFLAGS") 
AC_TRY_COMPILE(,,AC_MSG_RESULT("yes");,AC_MSG_RESULT("no");CXXFLAGS=$SAVE_CXXFLAGS)

AC_PROG_INSTALL 
AM_PROG_LIBTOOL
AC_CHECK_TOOL([STRIP],[strip])

AC_CONST
    
if test "$prefix" = "NONE"
then
	prefix="$ac_default_prefix"
fi
aikdatadir=`eval echo $datadir/$PACKAGE/`

AIK_CXXFLAGS="-DAIK_DATA_DIR=\\\"$aikdatadir\\\" -DNDEBUG"
AC_SUBST(AIK_CXXFLAGS)

AC_OUTPUT(Makefile src/Makefile data/Makefile Aiksaurus.spec)
