AC_INIT(src/AiksaurusGTK.cpp)
AM_INIT_AUTOMAKE(AiksaurusGTK, 0.13)
AM_CONFIG_HEADER(src/config.h)

AC_PROG_CC
AC_PROG_CXX
AM_PATH_GTK
AC_HEADER_STDC

CXXFLAGS="-Wall -s $CXXFLAGS $GTK_CFLAGS"
LDFLAGS="-lAiksaurus $GTK_LIBS"

SAVE_CXXFLAGS=$CXXFLAGS
AC_MSG_CHECKING("whether $CXX accepts $SAVE_CXXFLAGS") 
AC_TRY_COMPILE(,,AC_MSG_RESULT("yes");,AC_MSG_RESULT("no");CXXFLAGS=$SAVE_CXXFLAGS)

AC_PROG_INSTALL 
AM_PROG_LIBTOOL

AC_CHECK_TOOL([STRIP],[strip])

AIK_CXXFLAGS="-DNDEBUG"
AC_SUBST(AIK_CXXFLAGS)

AC_OUTPUT(Makefile src/Makefile AiksaurusGTK.spec)
