AC_INIT(src/AiksaurusGTK.cpp)
AM_INIT_AUTOMAKE(AiksaurusGTK, 0.24)
AM_CONFIG_HEADER(src/config.h)

AC_PROG_CC
AC_PROG_CXX
AC_HEADER_STDC

Xuname=X`uname`
if test "$Xuname" != "XDarwin"; then
	CXXFLAGS="-Wall -s $CXXFLAGS"
fi

PKG_CHECK_MODULES(AIK,[gtk+-2.0 >= 2.0.0])

CPPFLAGS="$CPPFLAGS $AIK_CFLAGS"
LDFLAGS="$LDFLAGS -lAiksaurus $AIK_LIBS"

AC_LANG_CPLUSPLUS

SAVE_CXXFLAGS=$CXXFLAGS
AC_MSG_CHECKING("whether $CXX accepts $SAVE_CXXFLAGS") 
AC_TRY_COMPILE(,,AC_MSG_RESULT("yes");,AC_MSG_RESULT("no");CXXFLAGS=$SAVE_CXXFLAGS)

AC_PROG_INSTALL 
AM_PROG_LIBTOOL

AC_CHECK_TOOL([STRIP],[strip])

AIK_CXXFLAGS="-DNDEBUG"
AC_SUBST(AIK_CXXFLAGS)

AC_OUTPUT(Makefile src/Makefile AiksaurusGTK.spec)
